MNGW-6944: Alignment for mobile fix.

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -4,6 +4,15 @@ body.lang_es {
     width: 125px;
   }
 
+  /* Promos */
+  #PromosPage {
+    @media only screen and (max-width: 767px) {
+      .accordion-button {
+        width: 100%;
+      }
+    }
+  }
+
   /* Details */
   #VehicleDetailsPage {
     @media (max-width: 1090px) {
